--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     </div>
 
 
-    <div class="center">
+    <div class="start">
         <h1>Handcrafted, home-made masterpieces</h1>
         <form class="form-mail">
-                <input type="email" placeholder="Enter your email adress">
-                <button type="button" class="button">GET STARTED</button> 
+                <input type="email" size = "35" placeholder="Enter your email adress" required>
+                <br>
+                <input type="submit" value="GET STARTED">
         </form>
 
 
