--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="product-unit">
-            <h2>Bass Trombone  </h2>
+            <h2>Bass Trombone </h2>
             <h1>$900</h1>
             <p>
 
@@ -106,7 +106,7 @@
         </div>
 
         <div class="product-unit">
-            <h2>Valve  Trombone </h2>
+            <h2>Valve Trombone </h2>
             <h1>$1200</h1>
             <p>
 
@@ -125,7 +125,12 @@
 
     <footer>
         <p>
-            &copyCopyright 2016, Original Trombones
+
+            <p class="footer-p"><a href="#">Privacy</a></p>
+            <p class="footer-p"><a href="#">Terms</a></p>
+            <p class="footer-p"><a href="#">Contact</a></p>
+            <span>&copyCopyright 2016, Original Trombones</span>
+
         </p>
     </footer>
 </body>
